--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,18 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script type='text/javascript' src='/jquery/jquery.min.js'></script>
+    <script type='text/javascript' src='/socket.io/socket.io.js'></script>
+    <script type='text/javascript' src='/javascripts/index.js'></script>
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <div id='controllers' style='border:solid 1px'></div>
+    <div>
+      <input id='textbox-send' type='text' />
+      <button id='button-send' type='button'>send</button>
+    </div>
+    <div id='log'></div>
   </body>
 </html>
