--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,40 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script type='text/javascript' src='/jquery/jquery.min.js'></script>
-    <script type='text/javascript' src='/socket.io/socket.io.js'></script>
-    <script type='text/javascript' src='/javascripts/index.js'></script>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <div id='controllers' style='border:solid 1px'></div>
-    <div>
-      <input id='textbox-send' type='text' />
-      <button id='button-send' type='button'>send</button>
-    </div>
-    <div id='log'></div>
-  </body>
+<head>
+<title>test</title>
+<link rel='stylesheet' href='/stylesheets/style.css' />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+<script type='text/javascript' src='/socket.io/socket.io.js'></script>
+<script type='text/javascript' src='/javascripts/index.js'></script>
+<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+</head>
+<body>
+	<!---home--------------------->
+	<div id="home" data-role="page">
+		<div data-role="header">
+			<h1>pi_IoT</h1>
+			</div>
+		<div data-role="content">
+			<ul data-role="listview" data-inset="true">
+				<li>
+				<%- list01 %>
+				</li>
+				<li>
+				<%- list02 %>
+				</li>
+				<li>
+				<%- list03 %>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!---fan--------------------->
+	<%- fan %>
+	<!---light--------------------->
+	<%- light %>
+	<!---remocon--------------------->
+	<%- remocon %>
+</body>
 </html>
