リストビューの表示崩れを解消

--- a/views/fan-light.ejs
+++ b/views/fan-light.ejs
@@ -1,4 +1,4 @@
-﻿<div id="<%= deviceid %>" data-role="page">
+<div id="<%= deviceid %>" data-role="page">
 	<div data-role="header">
 		<a href="#home" data-role="button" data-icon="home" data-iconpos="notext">home</a>
 		<h1>制御ページ</h1>
