--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,3 +1,5 @@
-﻿<a href="#<%= deviceid %>" data-transition="slide"><img src="<%= icon %>">
-	<h3><%= listname %></h3>
+<li>
+<a href="#<%= deviceid %>" data-transition="slide"><img src="<%= icon %>">
+<h3><%= listname %></h3>
 </a>
+</li>
