--- a/views/remocon.ejs
+++ b/views/remocon.ejs
@@ -1,4 +1,4 @@
-﻿<div  id="remocon" data-role="page">
+<div  id="remocon" data-role="page">
 	<div data-role="header">
 		<a href="#home" data-role="button" data-icon="home" data-iconpos="notext">home</a>
 		<h1>制御ページ</h1>
@@ -12,8 +12,8 @@
 				<table border="0" align="center">
 					<tr>
 						<td width="60"><input id='tvpower' type="button" value="P"></td>
-						<td width="60"><input id='p' type="button" value="+"></td>
-						<td width="60"><input id='m' type="button" value="-"></td>
+						<td width="60"><a href="#" id='a' data-icon="arrow-u"></a></td>
+						<td width="60"><input id='b' type="button" value="-"></td>
 					</tr>
 					<tr>
 						<td width="60"><input id='ch1' type="button" value="1"></td>
