--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,35 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 <head>
 <title>test</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="http://code.jquery.com/jquery-1.11.3.js"></script>
 <script type='text/javascript' src='/socket.io/socket.io.js'></script>
 <script type='text/javascript' src='/javascripts/index.js'></script>
-<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script>
+(function($) {
+  $('#list').listview('refresh');
+})(jQuery);
+</script>
 </head>
 <body>
-	<!---home--------------------->
 	<div id="home" data-role="page">
 		<div data-role="header">
 			<h1>pi_IoT</h1>
-			</div>
+		</div>
 		<div data-role="content">
-			<ul data-role="listview" data-inset="true">
-				<li>
+			<ul data-role="listview" data-inset="true" id="list">
 				<%- list01 %>
-				</li>
-				<li>
 				<%- list02 %>
-				</li>
-				<li>
 				<%- list03 %>
-				</li>
 			</ul>
 		</div>
 	</div>
-	<!---fan--------------------->
 	<%- fan %>
-	<!---light--------------------->
 	<%- light %>
-	<!---remocon--------------------->
 	<%- remocon %>
 </body>
 </html>
