--- a/public/ejsparts/remocon.ejs
+++ b/public/ejsparts/remocon.ejs
@@ -11,30 +11,29 @@
 		<!--TVリモコン的なもの-->
 		<table border="0" align="center">
 			<tr>
-				<td width="60"><input id="tvpower" type="button" value="P"></td>
-				<td width="60"><a href="#" id="a" data-icon="arrow-u"></a></td>
-				<td width="60"><input id="b" type="button" value="-"></td>
-				<td width="60"><input id="b" type="button" value="-"></td>
+				<td width="60"><input class="button" data-file="files/power.data"type="button" value="P"></td>
+				<td width="60"><input class="button" data-file="files/up.data" data-repeat="1" type="button" value="+"></td>
+				<td width="60"><input class="button" data-file="files/down.data" data-repeat="1" type="button" value="-"></td>
 			</tr>
 			<tr>
-				<td width="60"><input id="ch1" type="button" value="1"></td>
-				<td width="60"><input id="ch2" type="button" value="2"></td> 
-				<td width="60"><input id="ch3" type="button" value="3"></td>
+				<td width="60"><input class="button" data-file="files/ch01.data" type="button" value="1"></td>
+				<td width="60"><input class="button" data-file="files/ch02.data" type="button" value="2"></td> 
+				<td width="60"><input class="button" data-file="files/ch03.data" type="button" value="3"></td>
 			</tr>
 			<tr>
-				<td width="60"><input id="ch4" type="button" value="4"></td>
-				<td width="60"><input id="ch5" type="button" value="5"></td> 
-				<td width="60"><input id="ch6" type="button" value="6"></td>
+				<td width="60"><input class="button" data-file="files/ch04.data" type="button" value="4"></td>
+				<td width="60"><input class="button" data-file="files/ch05.data" type="button" value="5"></td> 
+				<td width="60"><input class="button" data-file="files/ch06.data" type="button" value="6"></td>
 			</tr>
 			<tr>
-				<td width="60"><input id="ch7" type="button" value="7"></td>
-				<td width="60"><input id="ch8" type="button" value="8"></td> 
-				<td width="60"><input id="ch9" type="button" value="9"></td>
+				<td width="60"><input class="button" data-file="files/ch07.data" type="button" value="7"></td>
+				<td width="60"><input class="button" data-file="files/ch08.data" type="button" value="8"></td> 
+				<td width="60"><input class="button" data-file="files/ch09.data" type="button" value="9"></td>
 			</tr>
-			<tr>	
-				<td width="60"><input id="ch10" type="button" value="10"></td>
-				<td width="60"><input id="ch11" type="button" value="11"></td> 
-				<td width="60"><input id="ch12" type="button" value="12"></td>
+			<tr>
+				<td width="60"><input class="button" data-file="files/ch10.data" type="button" value="10"></td>
+				<td width="60"><input class="button" data-file="files/ch11.data" type="button" value="11"></td> 
+				<td width="60"><input class="button" data-file="files/ch12.data" type="button" value="12"></td>
 			</tr>						
 		</table>
 	</div>
